--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="HomePage" ></activity>
+        <activity android:name=".HomePage" ></activity>
+        <activity android:name=".AddMission" ></activity>
     </application>
 
 </manifest>
